Fixed CSS issues on mobile and font

--- a/assets/css/woocommerce-responsive.css
+++ b/assets/css/woocommerce-responsive.css
@@ -27,7 +27,8 @@
 	.type-product form.cart .single_variation, .type-product form.cart .variations_button { float:none; width:100%; }
 	.products li { margin-left:1%; width:44%; }
 	.products li.first { clear:none; margin-left:1%; }
-	.col2-set .col-1, .col2-set .col-2 { float:none; width:auto; }
+	.col2-set .col-1, .col2-set .col-2 { float:none; width:auto; clear:both; }
+	.col2-set .col-1 { margin-bottom:30px; }
 	.wp-pagenavi .pages, .wp-pagenavi .page, .wp-pagenavi .extend { display:none; }
 	#content input[type=text], #content input[type=email], #content input[type=phone], #content textarea, #content select {
 		width:95%!important; display:block; margin-bottom:5px;
@@ -36,4 +37,5 @@
 	.shop_table tr td.actions input[type=submit] { display:block; margin:10px 0; }
 	.shop_table .product-price, .shop_table .product-thumbnail, .product-remove { display:none; }
 	#payment .place-order input[type="submit"] { float:none; clear:both; display:block; }
+	#payment .place-order .terms { margin-top:10px; }
 }
